--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="main-container">
+      <!-- header -->
       <div class="header row">
         <div id="home-logo">
           <a href="#">
@@ -27,6 +28,7 @@
           <a href="">Newsletter</a>
         </div>
       </div>
+      <!-- banner -->
       <div id="banner" class="screen-height">
         <div id="logo">
           <img
@@ -43,6 +45,7 @@
             nos ressources
           </h2>
         </div>
+        <!-- cours -->
         <a href="#cours">
           <button>
             Découvrez nos cours<img
@@ -59,6 +62,7 @@
           </a>
         </div>
       </div>
+      <!-- learn -->
       <div id="learn" class="screen-height">
         <h1>Apprendre, découvrir, expérimenter</h1>
         <div class="terminal">
@@ -135,9 +139,41 @@
             <p class="red-btn">Cours</p>
           </div>
         </div>
-        <a class="btn btn-ghost" href="#">Voir tous les cours</a>
+        <a href="#">
+          <button class="see-courses">Voir tous les cours</button>
+        </a>
 
-        <button class="see-courses">Voir tous les cours</button>
+      </div>
+      <!-- ressources -->
+      <div id="ressources" class="screen-height">
+        <h1>Les ressources</h1>
+        <h2>Gratuites</h2>
+        <div class="card-ressource">
+          <img src="assets/enveloppe-ouverte.png" alt="enveloppe-ouverte">
+          <h4>Newsletter &gt</h4>
+          <p>Toutes les semaines</p>
+        </div>
+        <div class="card-ressource">
+          <img src="assets/blog.png" alt="blog">
+          <h4>Blog &gt</h4>
+          <p>Toutes les semaines</p>
+        </div>
+        <div class="card-ressource">
+          <img src="assets/podcast.png" alt="podcast">
+          <h4>Podcast &gt</h4>
+          <p>Toutes les semaines</p>
+        </div>
+        <div class="card-ressource">
+          <img src="assets/video.png" alt="video">
+          <h4>vidéo &gt</h4>
+          <p>Toutes les semaines</p>
+        </div>
+      </div>
+      <!-- bubble message -->
+      <div class="message">
+        <div id="circle">
+          <img src="assets/message.png">
+        </div>
       </div>
     </div>
   </body>
