bounce arrow css

--- a/index.html
+++ b/index.html
@@ -53,11 +53,9 @@
               alt="briefcase"
             />
           </button>
-
         </a>
         <div class="bounce">
           <a href="#learn">
-
             <img src="assets/arrow-down.svg" alt="arrow-down" />
           </a>
         </div>
@@ -69,23 +67,29 @@
           <div class="header-terminal">
             <p>Terminal</p>
             <div class="cercle">
-                <img src="assets/circle-solid.svg" width="12px"alt="round" />
-                <img src="assets/circle-solid.svg" width="12px"alt="round" />
-                <img src="assets/circle-solid.svg" width="12px"alt="round" />
-
+              <img src="assets/circle-solid.svg" width="12px" alt="round" />
+              <img src="assets/circle-solid.svg" width="12px" alt="round" />
+              <img src="assets/circle-solid.svg" width="12px" alt="round" />
             </div>
-         
           </div>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque,
             accusamus quaerat. Laudantium necessitatibus distinctio in nihil non
-            enim, harum expedita veritatis tempore qui cupiditate ullam tenetur soluta, animi alias rem. <br><br> 
-            Quo neque error repudiandae fuga? Ipsa laudantium molestias eos sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam recusandae alias error harum maxime adipisci amet laborum. Perspiciatis minima nesciunt dolorem! <br>
+            enim, harum expedita veritatis tempore qui cupiditate ullam tenetur
+            soluta, animi alias rem. <br /><br />
+            Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
+            sapiente officiis modi at sunt excepturi expedita sint? Sed
+            quibusdam recusandae alias error harum maxime adipisci amet laborum.
+            Perspiciatis minima nesciunt dolorem! <br />
             Officiis iure rerum voluptates a cumque velit quibusdam sed amet
             tempora. Sit laborum ab, eius fugit doloribus tenetur fugiat,
             temporibus enim commodi iusto libero magni deleniti quod quam
-            consequuntur! Commodi minima excepturi repudiandae velit hic maxime doloremque. Quaerat provident commodi consectetur veniam similique ad earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore suscipit quas?
-            <br>    
+            consequuntur! Commodi minima excepturi repudiandae velit hic maxime
+            doloremque. Quaerat provident commodi consectetur veniam similique
+            ad earum omnis ipsum saepe, voluptas, hic voluptates pariatur est
+            explicabo fugiat, dolorum eligendi quam cupiditate excepturi
+            mollitia maiores labore suscipit quas?
+            <br />
           </p>
           <div class="footer-terminal"></div>
         </div>
@@ -94,46 +98,53 @@
         <h1>Les cours</h1>
         <h2>Un abonnement unique</h2>
         <div class="courses">
-          <div class="">
-
+          <div class="card-and-label"> <!-- besoin pour placer correctement le label 'red-btn' -->
             <div class="card-cours">
               <img src="assets/sql.png" alt="SQL" />
               <div class="card-cours-infos">
                 <h4>Maîtrisez SQL et MySQL</h4>
-                <p>les bases de données relationnelles sont <strong>incontournables</strong> pour les devs web !</p>
+                <p>
+                  les bases de données relationnelles sont
+                  <strong>incontournables</strong> pour les devs web !
+                </p>
               </div>
             </div>
             <p class="red-btn">Cours</p>
           </div>
-          <div class="">
-
+          <div class="card-and-label">
             <div class="card-cours">
               <img src="assets/job.png" alt="job" />
               <div class="card-cours-infos">
                 <h4>Décrocher votre premier job de dev</h4>
-                <p>Si vous décrocher un <strong>emploi</strong> mais que vous n'arrivez pas à vous vrendre.</p>
+                <p>
+                  Si vous décrocher un <strong>emploi</strong> mais que vous
+                  n'arrivez pas à vous vrendre.
+                </p>
               </div>
             </div>
             <p class="red-btn">Cours</p>
           </div>
-          <div class="">
-
+          <div class="card-and-label">
             <div class="card-cours">
               <img src="assets/git.png" alt="git" />
               <div class="card-cours-infos">
                 <h4>Apprenez Git et Github</h4>
-                <p>L'outil indispensable pour gérer <strong>son code</strong>.</p>
+                <p>
+                  L'outil indispensable pour gérer <strong>son code</strong>.
+                </p>
               </div>
             </div>
             <p class="red-btn">Cours</p>
           </div>
-          <div class="">
-
+          <div class="card-and-label">
             <div class="card-cours">
               <img src="assets/freelance.png" alt="freelance.png" />
               <div class="card-cours-infos">
                 <h4>Maîtrisez SQL et MySQL</h4>
-                <p>les bases de données relationnelles sont <strong>incontournables</strong> pour les devs web !</p>
+                <p>
+                  les bases de données relationnelles sont
+                  <strong>incontournables</strong> pour les devs web !
+                </p>
               </div>
             </div>
             <p class="red-btn">Cours</p>
@@ -142,37 +153,38 @@
         <a href="#">
           <button class="see-courses">Voir tous les cours</button>
         </a>
-
       </div>
       <!-- ressources -->
       <div id="ressources" class="screen-height">
         <h1>Les ressources</h1>
         <h2>Gratuites</h2>
-        <div class="card-ressource">
-          <img src="assets/enveloppe-ouverte.png" alt="enveloppe-ouverte">
-          <h4>Newsletter &gt</h4>
-          <p>Toutes les semaines</p>
-        </div>
-        <div class="card-ressource">
-          <img src="assets/blog.png" alt="blog">
-          <h4>Blog &gt</h4>
-          <p>Toutes les semaines</p>
-        </div>
-        <div class="card-ressource">
-          <img src="assets/podcast.png" alt="podcast">
-          <h4>Podcast &gt</h4>
-          <p>Toutes les semaines</p>
-        </div>
-        <div class="card-ressource">
-          <img src="assets/video.png" alt="video">
-          <h4>vidéo &gt</h4>
-          <p>Toutes les semaines</p>
+        <div class="ressources-cards">
+          <div class="card-ressource">
+            <img src="assets/enveloppe-ouverte.png" alt="enveloppe-ouverte" />
+            <h4>Newsletter &gt</h4>
+            <p>Toutes les semaines</p>
+          </div>
+          <div class="card-ressource">
+            <img src="assets/blog.png" alt="blog" />
+            <h4>Blog &gt</h4>
+            <p>Toutes les semaines</p>
+          </div>
+          <div class="card-ressource">
+            <img src="assets/podcast.png" alt="podcast" />
+            <h4>Podcast &gt</h4>
+            <p>Toutes les semaines</p>
+          </div>
+          <div class="card-ressource">
+            <img src="assets/video.png" alt="video" />
+            <h4>vidéo &gt</h4>
+            <p>Toutes les semaines</p>
+          </div>
         </div>
       </div>
       <!-- bubble message -->
       <div class="message">
         <div id="circle">
-          <img src="assets/message.png">
+          <img src="assets/message.png" />
         </div>
       </div>
     </div>
