add le blog section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <!-- cours -->
         <a href="#cours">
-          <button>
+          <button class="btn-white">
             Découvrez nos cours<img
               src="assets/briefcase-6.svg"
               alt="briefcase"
@@ -60,6 +60,8 @@
           </a>
         </div>
       </div>
+      <!-- cours END -->
+
       <!-- learn -->
       <div id="learn" class="screen-height">
         <h1>Apprendre, découvrir, expérimenter</h1>
@@ -95,7 +97,7 @@
         </div>
       </div>
       <div id="cours" class="screen-height">
-        <h1>Les cours</h1>
+        <h1>Les Cours</h1>
         <h2>Un abonnement unique</h2>
         <div class="courses">
           <div class="card-and-label"> <!-- besoin pour placer correctement le label 'red-btn' -->
@@ -151,9 +153,11 @@
           </div>
         </div>
         <a href="#">
-          <button class="see-courses">Voir tous les cours</button>
+          <button class="btn-black">Voir tous les cours</button>
         </a>
       </div>
+      <!-- learn END -->
+
       <!-- ressources -->
       <div id="ressources" class="screen-height">
         <h1>Les ressources</h1>
@@ -167,26 +171,53 @@
           <div class="card-ressource">
             <img src="assets/blog.png" alt="blog" />
             <h4>Blog &gt</h4>
-            <p>Toutes les semaines</p>
+            <p>350+ articles</p>
           </div>
           <div class="card-ressource">
             <img src="assets/podcast.png" alt="podcast" />
             <h4>Podcast &gt</h4>
-            <p>Toutes les semaines</p>
+            <p>30+ épisodes</p>
           </div>
           <div class="card-ressource">
             <img src="assets/video.png" alt="video" />
             <h4>vidéo &gt</h4>
-            <p>Toutes les semaines</p>
+            <p>Découvrez Codeflix</p>
           </div>
         </div>
       </div>
-      <!-- bubble message -->
+      <!-- ressources END -->
+
+      <!-- blog -->
+      <div id="blog" class="screen-height">
+        <h1>Le Blog</h1>
+        <img class="img-blog" src="assets/blog.png" alt="blog" />
+        <div class="carrousel">
+            <img class="arrow-left" src="assets/arrow-down.svg" alt="arrow-left" />
+          <div class="carrousel-images-blog">
+            <img src="assets/img-carrousel-01.png" alt="">
+            <img src="assets/img-carrousel-02.png" alt="">
+            <img src="assets/img-carrousel-03.png" alt="">
+          </div>
+            <img class="arrow-right" src="assets/arrow-down.svg" alt="arrow-right" />
+        </div>
+        <p>Découvrir de nouveaux sujets, de nouvelles technologie, mettre en place une veille et <strong>s'améliorer de jour en jour ne devrait pas être si compliqué que ça, ni payant</strong>.</p>
+        <p>Voilà pourquoi notre blog est <strong>mis à jour chaque semaine</strong> !</p>
+        <a href="#">
+          <button class="btn-white">Lire le blog 👓</button>
+        </a>
+        <p><em>+ de 12 000 lecteurs/mois</em></p>
+      </div>
+      <!-- blog END -->
+      
+      <!-- bubble messager -->
       <div class="message">
         <div id="circle">
           <img src="assets/message.png" />
         </div>
       </div>
+
+      <!-- footer -->
+      <div class="footer"></div>
     </div>
   </body>
 </html>
