--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+    <script src="https://use.fontawesome.com/ed6d66e8f4.js"></script>
+
+
     <title>Maquette Claire</title>
   </head>
   <body>
@@ -100,7 +104,8 @@
         <h1>Les Cours</h1>
         <h2>Un abonnement unique</h2>
         <div class="courses">
-          <div class="card-and-label"> <!-- besoin pour placer correctement le label 'red-btn' -->
+          <div class="card-and-label">
+            <!-- besoin pour placer correctement le label 'red-btn' -->
             <div class="card-cours">
               <img src="assets/sql.png" alt="SQL" />
               <div class="card-cours-infos">
@@ -160,7 +165,7 @@
 
       <!-- ressources -->
       <div id="ressources" class="screen-height">
-        <h1>Les ressources</h1>
+        <h1>Les Ressources</h1>
         <h2>Gratuites</h2>
         <div class="ressources-cards">
           <div class="card-ressource">
@@ -175,12 +180,12 @@
           </div>
           <div class="card-ressource">
             <img src="assets/podcast.png" alt="podcast" />
-            <h4>Podcast &gt</h4>
+            <h4>Podcasts &gt</h4>
             <p>30+ épisodes</p>
           </div>
           <div class="card-ressource">
             <img src="assets/video.png" alt="video" />
-            <h4>vidéo &gt</h4>
+            <h4>Vidéos &gt</h4>
             <p>Découvrez Codeflix</p>
           </div>
         </div>
@@ -192,23 +197,41 @@
         <h1>Le Blog</h1>
         <img class="img-blog" src="assets/blog.png" alt="blog" />
         <div class="carrousel">
-            <img class="arrow-left" src="assets/arrow-down.svg" alt="arrow-left" />
+          <img
+            class="arrow-left"
+            src="assets/arrow-down.svg"
+            alt="arrow-left"
+          />
           <div class="carrousel-images-blog">
-            <img src="assets/img-carrousel-01.png" alt="">
-            <img src="assets/img-carrousel-02.png" alt="">
-            <img src="assets/img-carrousel-03.png" alt="">
+            <img src="assets/img-carrousel-01.png" alt="" />
+            <img src="assets/img-carrousel-02.png" alt="" />
+            <img src="assets/img-carrousel-03.png" alt="" />
           </div>
-            <img class="arrow-right" src="assets/arrow-down.svg" alt="arrow-right" />
+          <img
+            class="arrow-right"
+            src="assets/arrow-down.svg"
+            alt="arrow-right"
+          />
         </div>
-        <p>Découvrir de nouveaux sujets, de nouvelles technologie, mettre en place une veille et <strong>s'améliorer de jour en jour ne devrait pas être si compliqué que ça, ni payant</strong>.</p>
-        <p>Voilà pourquoi notre blog est <strong>mis à jour chaque semaine</strong> !</p>
+        <p>
+          Découvrir de nouveaux sujets, de nouvelles technologie, mettre en
+          place une veille et
+          <strong
+            >s'améliorer de jour en jour ne devrait pas être si compliqué que
+            ça, ni payant</strong
+          >.
+        </p>
+        <p>
+          Voilà pourquoi notre blog est
+          <strong>mis à jour chaque semaine</strong> !
+        </p>
         <a href="#">
           <button class="btn-white">Lire le blog 👓</button>
         </a>
         <p><em>+ de 12 000 lecteurs/mois</em></p>
       </div>
       <!-- blog END -->
-      
+
       <!-- bubble messager -->
       <div class="message">
         <div id="circle">
@@ -217,7 +240,47 @@
       </div>
 
       <!-- footer -->
-      <div class="footer"></div>
+      <div class="footer">
+        <div class="footer1">
+          <div id="home-logo">
+            <a href="#">
+              <img
+                class="desktop"
+                src="assets/logo-desktop.png"
+                alt="computer-image"
+              />
+              <p>&ltmyBlog&gt</p>
+            </a>
+          </div>
+        </div>
+        <div class="footer2">
+          <a href="#">Mentions légales</a>
+          <a href="#">Conditions générales de vente</a>
+          <a href="#">A propos</a>
+          <a href="#">Nous contacter</a>
+        </div>
+        <div class="footer3">
+          <a href="#">Les 4 axes d'apprentissage d'un dev </a>
+          <a href="#">Les outils pour visualiser du JSON en graphe </a>
+          <a href="#">Préparer les tâches pour intégrer un dev junior </a>
+          <a href="#">Préparer les tâches pour intégrer un dev junior </a>
+        </div>
+        <div class="footer4">
+          <div class="social-media">
+            <!-- <a href=""><img src="assets/youtube.svg" alt="youtube"></a>
+            <a href=""><img src="assets/twitter.svg" alt="twitter"></a>
+            <a href=""><img src="assets/linkedin-in.svg" alt="linkedin"></a>
+            <a href=""><img src="assets/twitch.svg" alt="twitch"></a> -->
+            <span><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></span>
+            <span><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
+            <span><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
+            <span><a href=""><i class="fa fa-twitch" aria-hidden="true"></i></a></span>
+          </div>
+          <div class="connect">
+            <p>S'abonner à la newsletter</p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
