--- a/index.html
+++ b/index.html
@@ -267,10 +267,6 @@
         </div>
         <div class="footer4">
           <div class="social-media">
-            <!-- <a href=""><img src="assets/youtube.svg" alt="youtube"></a>
-            <a href=""><img src="assets/twitter.svg" alt="twitter"></a>
-            <a href=""><img src="assets/linkedin-in.svg" alt="linkedin"></a>
-            <a href=""><img src="assets/twitch.svg" alt="twitch"></a> -->
             <span><a href=""><i class="fa fa-youtube" aria-hidden="true"></i></a></span>
             <span><a href=""><i class="fa fa-twitter" aria-hidden="true"></i></a></span>
             <span><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></span>
@@ -278,9 +274,12 @@
           </div>
           <div class="connect">
             <form action="get">           
-              <label for="email"><p>S'abonner à la newsletter</p></label>
-              <input class="email-address" type="email" name="email" id="email" pattern=".+@globex\.com" placeholder="jane.doe@matrice.com" required>
-              <input class="btn-submit" type="submit" value="S'inscrire" />
+              <label for="email">S'abonner à la newsletter</label>
+              <div class="email-form">
+                <input class="email-address" type="email" name="email" id="email" pattern=".+@globex\.com" placeholder="jane.doe@matrice.com" required>
+                <input class="btn-submit" type="submit" value="S'inscrire" />
+                
+              </div>
 
             </form>
           </div>
