page cours presentation-cards

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
     <script src="https://use.fontawesome.com/ed6d66e8f4.js"></script>
 
 
-    <title>Maquette Claire</title>
+    <title>myBlog</title>
   </head>
   <body>
     <div class="main-container">
@@ -22,17 +22,18 @@
               src="assets/logo-desktop.png"
               alt="computer-image"
             />
-            <p>&ltmyBlog&gt</p>
+            <p>&lt;myBlog&gt;</p>
           </a>
         </div>
         <div class="pages">
           <a href="#">Accueil</a>
-          <a href="#cours">Cours</a>
+          <a href="/cours.html">Cours</a>
           <a href="#blog">Blog</a>
           <a href="">Newsletter</a>
         </div>
       </div>
       <!-- banner -->
+      <!-- balise section ?? -->
       <div id="banner" class="screen-height">
         <div id="logo">
           <img
@@ -40,7 +41,7 @@
             src="assets/logo-desktop.png"
             alt="computer-image"
           />
-          <p>&ltmyBlog&gt</p>
+          <p>&lt;myBlog&gt;</p>
         </div>
         <div class="banner-text">
           <h1 classe="slogan">La plateforme d'apprentissage du code.</h1>
@@ -170,22 +171,22 @@
         <div class="ressources-cards">
           <div class="card-ressource">
             <img src="assets/enveloppe-ouverte.png" alt="enveloppe-ouverte" />
-            <h4>Newsletter &gt</h4>
+            <h4>Newsletter &gt;</h4>
             <p>Toutes les semaines</p>
           </div>
           <div class="card-ressource">
             <img src="assets/blog.png" alt="blog" />
-            <h4>Blog &gt</h4>
+            <h4>Blog &gt;</h4>
             <p>350+ articles</p>
           </div>
           <div class="card-ressource">
             <img src="assets/podcast.png" alt="podcast" />
-            <h4>Podcasts &gt</h4>
+            <h4>Podcasts &gt;</h4>
             <p>30+ épisodes</p>
           </div>
           <div class="card-ressource">
             <img src="assets/video.png" alt="video" />
-            <h4>Vidéos &gt</h4>
+            <h4>Vidéos &gt;</h4>
             <p>Découvrez Codeflix</p>
           </div>
         </div>
@@ -249,7 +250,7 @@
                 src="assets/logo-desktop.png"
                 alt="computer-image"
               />
-              <p>&ltmyBlog&gt</p>
+              <p>&lt;myBlog&gt;</p>
             </a>
           </div>
         </div>
@@ -277,8 +278,7 @@
               <label for="email">S'abonner à la newsletter</label>
               <div class="email-form">
                 <input class="email-address" type="email" name="email" id="email" pattern=".+@globex\.com" placeholder="jane.doe@matrice.com" required>
-                <input class="btn-submit" type="submit" value="S'inscrire" />
-                
+                <input class="btn-submit" type="submit" value="S'inscrire" />           
               </div>
 
             </form>
