add carrousel and counter JS

--- a/cours.html
+++ b/cours.html
@@ -17,7 +17,7 @@
       <!------- header ------->
       <div class="header row">
         <div id="home-logo">
-          <a href="#">
+          <a href="/index.html">
             <img
               class="desktop"
               src="assets/logo-desktop.png"
@@ -144,6 +144,12 @@
             </p>
             <button type="button" class="btn-pay" disabled><a href="#">Voir le cours</a></button>
           </div>
+        </div>
+        <div class="counter-courses">
+          <p id="counter"></p>
+      
+            <p>Supprimer la sélection <span id="trash-card-selected">🗑</span></p>
+         
         </div>
         <img class="dnu"src="assets/page-cours-dnu.png" alt="" />
       </section>
